maintain and refactor code